h1. Changelog

h2. 2.0.0 rc1

* 1 *Notice*: Please BACKUP your Contao database BEFORE UPDATE
* 1 *Feature*: ContentMultiArticles and ModuleMultiArticles
* 1 *Fix*: Use CSS settings of inclusion element. (CSS classes are added, ID overwritten)

h2. 1.1.1

* 1 *Feature*: Utilize chosen in Contao 2.11

h2. 1.1.0

* 1 *Feature*: New module to display all articles of a specific page and optionally of specific columns

h2. 1.0.2

* 1 *Feature*: Added the option to additionally output the article container


h2. 1.0.1

* 1 *Feature*: Added the option to exclude the module from the Contao website search


h2. 1.0.0

* 1 Initial release