@@ -1,5 +1,9 @@
 h1. Changelog
 
+h2. 2.0.0 stable
+
+* 1 *Feature*: Wrap container around all articles in multi article elements
+
 h2. 2.0.0 rc1
 
 * 1 *Notice*: Please BACKUP your Contao database BEFORE UPDATE
